--- a/projects/hw3d.vcxproj
+++ b/projects/hw3d.vcxproj
@@ -145,6 +145,9 @@
   <ItemGroup>
     <ClCompile Include="..\code\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\code\cleanwindows.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
