Create a Window class. Also remove gradient and draw a shaded triangle instead.
Code for shaded triangle obtained from: https://learn.microsoft.com/en-us/windows/win32/gdi/drawing-a-shaded-triangle

--- a/projects/hw3d.vcxproj.filters
+++ b/projects/hw3d.vcxproj.filters
@@ -2,8 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="..\code\main.cpp" />
+    <ClCompile Include="..\code\window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\code\cleanwindows.h" />
+    <ClInclude Include="..\code\window.h" />
+    <ClInclude Include="..\code\types.h" />
   </ItemGroup>
 </Project>
