Create a todo file

--- a/projects/hw3d.vcxproj.filters
+++ b/projects/hw3d.vcxproj.filters
@@ -10,5 +10,6 @@
     <ClInclude Include="..\code\window.h" />
     <ClInclude Include="..\code\types.h" />
     <ClInclude Include="..\code\input.h" />
+    <ClInclude Include="..\code\todo.h" />
   </ItemGroup>
 </Project>
