--- a/projects/hw3d.vcxproj
+++ b/projects/hw3d.vcxproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="..\code\cleanwindows.h" />
     <ClInclude Include="..\code\input.h" />
+    <ClInclude Include="..\code\todo.h" />
     <ClInclude Include="..\code\types.h" />
     <ClInclude Include="..\code\window.h" />
   </ItemGroup>
