Move "*Frame()" functions into new engine.h/.cpp

--- a/projects/hw3d.vcxproj
+++ b/projects/hw3d.vcxproj
@@ -147,12 +147,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\code\engine.cpp" />
     <ClCompile Include="..\code\input.cpp" />
     <ClCompile Include="..\code\main.cpp" />
     <ClCompile Include="..\code\window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\code\cleanwindows.h" />
+    <ClInclude Include="..\code\engine.h" />
     <ClInclude Include="..\code\input.h" />
     <ClInclude Include="..\code\todo.h" />
     <ClInclude Include="..\code\types.h" />
