--- a/projects/hw3d.vcxproj.filters
+++ b/projects/hw3d.vcxproj.filters
@@ -4,6 +4,7 @@
     <ClCompile Include="..\code\main.cpp" />
     <ClCompile Include="..\code\window.cpp" />
     <ClCompile Include="..\code\input.cpp" />
+    <ClCompile Include="..\code\engine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\code\cleanwindows.h" />
@@ -11,5 +12,6 @@
     <ClInclude Include="..\code\types.h" />
     <ClInclude Include="..\code\input.h" />
     <ClInclude Include="..\code\todo.h" />
+    <ClInclude Include="..\code\engine.h" />
   </ItemGroup>
 </Project>
