Introduce DirectX 11. Clear screen to cauliflower blue using it.
- The Graphics subsystem will be responsible for initializing the window.
- Remove engine.h and engine.cpp. Introduce control.h/.cpp which will be responsible for initializing all subsystems and running the main loop.
- Remove usage of GDI.
- Minor regression: No more GDI triangle. It will be replaced with the DirectX RGB triangle.

--- a/projects/hw3d.vcxproj.filters
+++ b/projects/hw3d.vcxproj.filters
@@ -4,7 +4,8 @@
     <ClCompile Include="..\code\main.cpp" />
     <ClCompile Include="..\code\window.cpp" />
     <ClCompile Include="..\code\input.cpp" />
-    <ClCompile Include="..\code\engine.cpp" />
+    <ClCompile Include="..\code\graphics.cpp" />
+    <ClCompile Include="..\code\control.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\code\cleanwindows.h" />
@@ -12,6 +13,7 @@
     <ClInclude Include="..\code\types.h" />
     <ClInclude Include="..\code\input.h" />
     <ClInclude Include="..\code\todo.h" />
-    <ClInclude Include="..\code\engine.h" />
+    <ClInclude Include="..\code\graphics.h" />
+    <ClInclude Include="..\code\control.h" />
   </ItemGroup>
 </Project>
