Draw a triangle, finally!
Note: The code is still messy and sub-optimal. I will clean it up in subsequent commits.

--- a/projects/hw3d.vcxproj.filters
+++ b/projects/hw3d.vcxproj.filters
@@ -16,5 +16,10 @@
     <ClInclude Include="..\code\graphics.h" />
     <ClInclude Include="..\code\control.h" />
     <ClInclude Include="..\code\asserts.h" />
+    <ClInclude Include="..\code\utils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\code\vertexshader.hlsl" />
+    <FxCompile Include="..\code\pixelshader.hlsl" />
   </ItemGroup>
 </Project>
